inserimento e generazione numeri

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gioco di memoria</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="numeri"></div>
+    <div id="input"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
