--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gioco di memoria</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gioco di Memoria</title>
+
 </head>
 <body>
-    <div id="numeri"></div>
-    <div id="input"></div>
+<div id="numbers"></div>
+<div id="input"></div>
 
     <script src="script.js"></script>
 </body>
